--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,12 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
-  uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+#  uses-material-design: true
+   assets:
+     - assets/ic_launcher.png
+     - assets/wooribank_logo.png
+     - assets/icons/face_id.png
+     - assets/icons/person_outline.png
 
 flutter_native_splash:
   image: assets/ic_launcher.png # size: 900x900
