--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
 dev_dependencies:
   flutter_native_splash: ^1.2.1
+  flutter_screenutil: ^5.0.0+2
   flutter_test:
     sdk: flutter
 
