--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
 dev_dependencies:
   flutter_native_splash: ^1.2.1
   flutter_screenutil: ^5.0.0+2
+  firebase_core: ^1.6.0
+  firebase_auth: ^3.1.0
+  provider: ^6.0.0
+  sms_autofill: ^2.0.1
+  fluttertoast: ^8.0.8
   flutter_test:
     sdk: flutter
 
@@ -26,6 +31,7 @@ flutter:
      - assets/wooribank_logo.png
      - assets/icons/face_id.png
      - assets/icons/person_outline.png
+     - assets/button_accept.png
 
 flutter_native_splash:
   image: assets/ic_launcher.png # size: 900x900
