--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dev_dependencies:
   provider: ^6.0.0
   sms_autofill: ^2.0.1
   fluttertoast: ^8.0.8
+  http: ^0.13.3
   flutter_test:
     sdk: flutter
 
