--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,8 @@ dev_dependencies:
   firebase_core: ^1.6.0
   firebase_auth: ^3.1.0
   provider: ^6.0.0
-  sms_autofill: ^2.0.1
-  fluttertoast: ^8.0.8
   http: ^0.13.3
+  slide_button: ^0.2.9
   flutter_test:
     sdk: flutter
 
