[Fix] 안드로이드 앱 이름 변경

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wooribank.frontend.wooribank_error_remittance">
    <application
-        android:label="wooribank_error_remittance"
+        android:label="착오송금반환서비스"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
