--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dev_dependencies:
   firebase_auth: ^3.1.0
   provider: ^6.0.0
   http: ^0.13.3
+  intl: ^0.17.0
   flutter_test:
     sdk: flutter
 
