--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dev_dependencies:
   flutter_screenutil: ^5.0.0+2
   firebase_core: ^1.6.0
   firebase_auth: ^3.1.0
+  firebase_messaging: ^10.0.7
+  flutter_local_notifications: ^8.2.0
   provider: ^6.0.0
   http: ^0.13.3
   intl: ^0.17.0
