--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dev_dependencies:
   firebase_auth: ^3.1.0
   firebase_messaging: ^10.0.7
   flutter_local_notifications: ^8.2.0
-  provider: ^6.0.0
+  external_app_launcher: ^0.0.1
   http: ^0.13.3
   intl: ^0.17.0
   flutter_test:
