[Update] 계좌 내역에서 반환 요청 완료 아이콘 추가

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ flutter:
     - assets/button_send.png
     - assets/button_next.png
     - assets/request_accepted.png
+    - assets/icons/return_requested.png
     - assets/return_request_checkbox.png
     - assets/agreement_off.png
     - assets/agreement_on.png
